# challenge

./: Cargo.toml  README.md
program/: Cargo.toml
program/src/: ixs.rs  lib.rs  processor.rs
program/src/shank_utils/: mod.rs
program/src/state/: challenge.rs  challenger.rs  mod.rs  redeem.rs
program/src/utils/: accounts.rs  asserts.rs  mod.rs
program/tests/: 01_create_challenge.rs  05_redeem.rs
program/tests/utils/: accounts.rs  mints.rs
src/: entrypoint.rs  error.rs  ixs.rs  lib.rs  processor.rs  state.rs
src/state/: challenge.rs  challenger.rs  common.rs  mod.rs  redeem.rs
src/utils/: asserts.rs  create_account.rs  mint.rs  mod.rs  solutions.rs
tests/: 01_create_challenge.rs  02_add_solutions.rs  03_start_challenge.rs  04_admit_challenger.rs  05_redeem.rs
tests/utils/: accounts.rs  ixs_custom.rs  mod.rs
ts/: .ammanrc.js  .gitignore  .solitarc.js  package.json
ts/idl/: challenge.json
ts/sh/: install-deps
ts/src/: ixs.ts  providers.ts
ts/src/common/: pda.ts  solution.ts
ts/src/framework/: types.ts
ts/src/state/: challenge.ts  challenger.ts  redeem.ts
ts/test/: 01_init-challenge.ts  02_admit.ts  03_redeem.ts  04_insights_challenges.ts
ts/test/utils/: amman.ts  index.ts  setup.ts
